syntax = "proto3";

package verification.door.v1;

option go_package = "github.com/NpoolPlatform/verification-door/message/npool";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

// Service Name
service VerificationDoor {
    // Method Version
    rpc Version (google.protobuf.Empty) returns (VersionResponse){
        option (google.api.http) = {
            post: "/version"
            body: "*"
        };
    };
    // get google authentication qr code url
    rpc GetQRcodeURL (GetQRcodeURLRequest) returns (GetQRcodeURLResponse) {
        option (google.api.http) = {
            post: "/v1/get/qrcode/url"
            body: "*"
        };
    };
    // verify user google authentication(user's input code)
    rpc VerifyGoogleAuth (VerifyGoogleAuthRequest) returns (VerifyGoogleAuthResponse) {
        option (google.api.http) = {
            post: "/v1/verify/google/auth"
            body: "*"
        };
    };
    // delete user google authentication record
    rpc DeleteUserGoogleAuth (DeleteUserGoogleAuthRequest) returns (DeleteUserGoogleAuthResponse) {
        option (google.api.http) = {
            post: "/v1/delete/user/google/auth"
            body: "*"
        };
    };
    // send email to user
    rpc SendEmail (SendEmailRequest) returns (SendEmailResponse) {
        option (google.api.http) = {
            post: "/v1/send/email"
            body: "*"
        };
    };
    // send sms to user(todo......)
    rpc SendSms (SendSmsRequest) returns (SendSmsResponse) {
        option (google.api.http) = {
            post: "/v1/send/sms"
            body: "*"
        };
    };
    // verify code user input. (can verify email code and sms code, verify sms code is todo......)
    rpc VerifyCode (VerifyCodeRequest) returns (VerifyCodeResponse) {
        option (google.api.http) = {
            post: "/v1/verify/code"
            body: "*"
        };
    };
}

// request body and response
message VersionResponse {
    string Info = 100;
}

message GetQRcodeURLRequest {
    string Username = 1;
    string UserID = 2;
}

message GetQRcodeURLResponse {
    string Info = 1;
}

message VerifyGoogleAuthRequest {
    string UserID = 1;
    string Code = 2;
}

message VerifyGoogleAuthResponse {
    string Info = 1;
}

message DeleteUserGoogleAuthRequest {
    string UserID = 1;
}

message DeleteUserGoogleAuthResponse {
    string Info = 1;
}

message SendEmailRequest {
    string Email = 2;
    string Intention = 3;
}

message SendEmailResponse {
    string Info = 1;
}

message SendSmsRequest {
    string Phone = 2;
    string Intention = 3;
}

message SendSmsResponse {
    string Info = 1;
}

message VerifyCodeRequest {
    string Param = 1;
    string Code = 2;
    string VerifyType = 3;
}

message VerifyCodeResponse {
    string Info = 1;
}